added parallel tests in gradle